--- a/hair-stylist-career/thank-you.html
+++ b/hair-stylist-career/thank-you.html
@@ -55,7 +55,9 @@
     
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9055657518577401"
      crossorigin="anonymous"></script>
-    
+
+	  <!-- Clarity tracking code for https://aspiring-careers.github.io/hair-stylist-career/ --><script>    (function(c,l,a,r,i,t,y){        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);    })(window, document, "clarity", "script", "ppf6uj7yno");</script>
+	  
   </head>
   <body>
 
