--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -96,7 +96,7 @@
 
        <!--Navigation Bar -->
        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-           <a class="navbar-brand" href="https://aspiring-careers.github.io/hair-stylist-career/"> 
+           <a class="navbar-brand" href="https://aspiring-careers.github.io/hair-stylist-career/" aria-label="Read more about Hair Stylist Career"> 
               <img src="images/Hair Stylist Career 8a.jpg" width="68" height="68" alt="Hair stylist career Logo" data-height-percentage="50" /> 
            </a> 
 
@@ -112,11 +112,11 @@
            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                <ul class="navbar-nav">
                    <li class="nav-item active">
-                       <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/index.html">Home <span class="sr-only">(current) </span> </a>
+                       <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/index.html" aria-label="Read more about Hair Stylist Career">Home <span class="sr-only">(current) </span> </a>
                    </li>
 
                    <li class="nav-item">
-                       <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/tools.html" >Tools</a>
+                       <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/tools.html" aria-label="Read more about tools used by hair stylist">Tools</a>
                    </li>
 
                    <li class="nav-item dropdown">
@@ -124,8 +124,8 @@
                           Men cutting
                        </a>
                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-smart.html" > Smart cut</a>
-                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-short.html" > Short cut</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-smart.html" aria-label="Read more about men haircut smart look"> Smart cut</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-short.html" aria-label="Read more about short men haircut"> Short cut</a>
                        </div>
 
                    </li>
@@ -135,15 +135,15 @@
                           Women cutting
                        </a>
                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-short.html" > Short hairs</a>
-                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-long.html" > Long hairs</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-short.html" aria-label="Read more about short women haircut"> Short hairs</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-long.html" aria-label="Read more about women long haircut"> Long hairs</a>
                        </div>
 
                    </li>		       
 		       
 
                    <li class="nav-item">
-                       <a href="https://aspiring-careers.github.io/hair-stylist-career/contact.html" class="nav-link">Contact Us</a>
+                       <a href="https://aspiring-careers.github.io/hair-stylist-career/contact.html" class="nav-link" aria-label="Read more about contact email">Contact Us</a>
                    </li>
 
                </ul>
